# AnchorMCLunchor

./: .gitignore  README.md  package-lock.json  package.json
anchorMCLuncher/backend/: README.md  caf_config.json  nodemon.json  package-lock.json  package.json  schema.sql
anchorMCLuncher/backend/src/: server.ts
anchorMCLuncher/backend/src/config/: db.ts  keys.ts
anchorMCLuncher/backend/src/controllers/: authController.ts  dockerController.ts  serverController.ts  yggdrasilController.ts
anchorMCLuncher/backend/src/middleware/: authMiddleware.ts
anchorMCLuncher/backend/src/routes/: authRoutes.ts  dockerRoutes.ts  serverRoutes.ts  yggdrasilRoutes.ts
anchorMCLuncher/backend/src/services/: cafService.ts  dbMigrationService.ts  dockerService.ts
anchorMCLuncher/frontend/: README.md  package-lock.json  package.json
anchorMCLuncher/frontend/src/: App.tsx  api.ts  isolation.ts  types.ts
anchorMCLuncher/frontend/src-tauri/: Cargo.toml  tauri.conf.json
anchorMCLuncher/frontend/src-tauri/capabilities/: default.json
anchorMCLuncher/frontend/src-tauri/src/: auth.rs  config.rs  downloader.rs  launcher.rs  lib.rs  modrinth.rs  server_ping.rs  system_info.rs  version_path.rs
anchorMCLuncher/frontend/src/components/: AnimatedPopup.tsx  ChoiceModal.tsx  DockerServerCard.tsx  DownloadTab.tsx  DownloadWindow.tsx  FileEditorModal.tsx  HomeTab.tsx  LaunchSettingsModal.tsx  LoadingSpinner.tsx  LoginCard.tsx  Logo.tsx  MessageModal.tsx  ModDetailModal.tsx  ModrinthBrowser.tsx  ServerCard.tsx  ServerConfigTab.tsx  ServerConsoleModal.tsx  ServerConsoleWindow.tsx  (+8 more)
(+1 files in other folders)
